--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tint2 (0.12.12~bl1+e9d6ec9f-1.1) jessie-backports; urgency=medium
+
+  * Non-maintainer upload.
+  * New upstream release 0.12.12.
+  * Build for jessie-backports.
+
+ -- Jens John <dev@2ion.de>  Tue, 2 Aug 2016 23:25:37 +0900
+
 tint2 (0.12.11~bl1+ee9207e8-1.1) jessie-backports; urgency=medium
 
   * Non-maintainer upload.
