--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (0.13.1-1) jessie-backports; urgency=medium
+
+  * New upstream release 0.13.1.
+
+ -- Jens John <dev@2ion.de>  Sun, 12 Mar 2017 20:08:59 +0100
+
 tint2 (0.13.0-1) jessie-backports; urgency=medium
 
   * debian/control: make myself the new maintainer a the package needed to be
