--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (0.14.3-1) jessie-backports; urgency=medium
+
+  * New upstream release 0.14.3.
+
+ -- Jens John <dev@2ion.de>  Sun, 23 Apr 2017 18:23:33 +0200
+
 tint2 (0.14.0-1) jessie-backports; urgency=medium
 
   * New upstream relesae 0.14.0.
