--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (15.3-1+deb8) jessie-backports; urgency=medium
+
+  * New upstream release 15.3.
+
+ -- Jens John <dev@2ion.de>  Fri, 10 Nov 2017 15:08:28 +0100
+
 tint2 (15.2-1+deb9) stretch-backports; urgency=medium
 
   * New upstream release 15.2.
