--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (16.1-1+deb8) jessie-backports; urgency=medium
+
+  * Release 16.1
+
+ -- Jens John <dev@2ion.de>  Wed, 10 Jan 2018 22:35:16 +0100
+
 tint2 (16.0-1+deb8) jessie-backports; urgency=medium
 
   * New upstream release 16.0
