--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (16.4-1) helium; urgency=medium
+
+  * New upstream release 16.4.
+
+ -- Jens John <dev@2ion.de>  Sun, 08 Jul 2018 14:26:03 +0200
+
 tint2 (15.2-1+deb9) stretch-backports; urgency=medium
 
   * New upstream release 15.2.
