--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,13 @@
-2019-06-02 master
-- Expand leading ~ in icon paths
-- Fix spacing around icons in executor without text in vertical panels (issue #716)
-- Fix Bug: Clock Only Updates Every Minute With Format %s (issue #724)
-- Fix markup drawing when font shadow enabled (issue #709)
-- Blink battery when low (issue #723)
-- Struts pivoting: workaround for panel positioning between monitors in mutter
-- Add support for battery percentage without % sign (issue #730)
+2019-07-12 master
+- Fixes:
+  - Fix spacing around icons in executor without text in vertical panels (issue #716)
+  - Fix Bug: Clock Only Updates Every Minute With Format %s (issue #724)
+  - Fix markup drawing when font shadow enabled (issue #709)
+  - Struts pivoting: workaround for panel positioning between monitors in mutter (Chris Billington)
+- Enhancements:
+  - Blink battery when discharging and low (issue #723)
+  - Add support for battery percentage without % sign (issue #730)
+  - Expand leading ~ in icon paths
 
 2018-08-05 16.6.1
 - Fix packaging regression for debian (issue #715)
