--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (16.7+bl9-1) stretch-backports; urgency=medium
+
+  * Release 16.7.
+
+ -- Jens John <dev@2ion.de>  Thu, 25 Jul 2019 19:31:40 +0200
+
 tint2 (16.2-1+deb9) stretch-backports; urgency=medium
 
   * Release 16.2.
