--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-tint2 (16.7+bl9-1) helium; urgency=medium
+tint2 (16.7+bl10-1) lithium; urgency=medium
 
   * New upstream release.
 
- -- Jens John <dev@2ion.de>  Sun, 05 Aug 2018 14:01:54 +0200
+ -- Jens John <dev@2ion.de>  Sat, 27 Jul 2019 11:54:29 +0200
