--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tint2 (16.7+bl10r1-1) lithium; urgency=medium
+
+  * Rebuild of same source.
+
+ -- Jens John <dev@2ion.de>  Wed, 20 May 2020 15:06:09 +0200
+
 tint2 (16.7+bl10-1) lithium; urgency=medium
 
   * New upstream release.
